--- a/ChatWithAI/ChatWithAI/Chat_Info.plist
+++ b/ChatWithAI/ChatWithAI/Chat_Info.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>API-KEY</key>
-	<string>AIzaSyAYlchp4pNaOrDsBDMe-LqJyN6AxizXovA</string>
+	<string>AIzaSyAYlchp4pNaOrDsBDMe-Use your key please fallow my medium article how to download the API Key</string>
 </dict>
 </plist>
